--- a/src/app/components/tables/outstanding/outstanding.component.html
+++ b/src/app/components/tables/outstanding/outstanding.component.html
@@ -11,54 +11,55 @@
             <th>Delivered</th>
             <th>Paid</th>
             <th>View Detail</th>
-
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let order of orders">
-            <td>{{order.OrderId_uuid}}</td>
-            <td>{{order.DatePlaced}}</td>
-            <td>{{order.Notes}}</td>
-            <td>{{order.Delivered}}</td>
-            <td>{{order.Paid}}</td>
+            <td>{{ order.OrderId_uuid }}</td>
+            <td>{{ order.DatePlaced }}</td>
+            <td>{{ order.Notes }}</td>
+
+            <div *ngIf="order.Delivered == 1; then yes; else no"></div>
+            <ng-template #yes><td class="green-text">Yes</td></ng-template>
+            <ng-template #no><td class="red-text">No</td></ng-template>
+
+            <div *ngIf="order.Paid == 1; then yes; else no"></div>
+            <ng-template #yes><td class="green-text">Yes</td></ng-template>
+            <ng-template #no><td class="red-text">No</td></ng-template>
+
             <td>
-              <fa-icon [icon]="faEdit" (click)="getDetails(order.OrderId_uuid)"></fa-icon>
+              <fa-icon
+                [icon]="faEdit"
+                (click)="getDetails(order.OrderId_uuid)"
+              ></fa-icon>
             </td>
           </tr>
         </tbody>
       </table>
-
     </div>
-
   </div>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="modal fade" id="formularioActualizar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="formularioActualizar"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog">
     <div class="modal-content">
-
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Order Details</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-
-
-
 
       <table class="table">
         <thead>
@@ -69,23 +70,13 @@
           </tr>
         </thead>
         <tbody>
-          <!--
-              OrderDetailId_uuid: String;
-  OrderId_uuid: String;
-  Product: String;
-  Quantity: Number;
-  OverridePrice: Number;
-          -->
           <tr *ngFor="let details of orderdetails">
-            <td>{{details.Product}}</td>
-            <td>{{details.Quantity}}</td>
-            <td>{{details.OverridePrice}}</td>
+            <td>{{ details.Product }}</td>
+            <td>{{ details.Quantity }}</td>
+            <td>{{ details.OverridePrice }}</td>
           </tr>
         </tbody>
       </table>
-
-
-
     </div>
   </div>
 </div>
