Added http interceotir

--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -1,9 +1,8 @@
 <section id="hero">
   <div class="container">
       <div class="content-center">
-           <h2 class="mt-6">Portal de Administración</h2>
-          <p>Sitio web solo accesible para personal autorizado</p>
-          <a href="/outstanding" class="btn btn-secondary mt-4">Pending Orders<img src="../../../../assets/images/arrow-right.svg" class="ml-2"></a>
+           <h2 class="mt-6">H2OVitanza Admin</h2>
+          <a href="/login" class="btn btn-secondary mt-4">Login<img src="../../../../assets/images/arrow-right.svg" class="ml-2"></a>
       </div>
   </div>
 </section>
