Translated login page

--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -1,3 +1,24 @@
+
+<style>
+  .indent-1 {float: left;}
+  .indent-1 section {width: 50%; float: left;}
+</style>
+
+<section class="indent-1">
+  <!-- Section 1 -->
+  <section>
+      <div>Outstanding orders summary</div>
+      <div>orders table with basic info</div>
+  </section>
+
+  <!-- Section 2 -->
+  <section>
+      <div>Pending changes for the months</div>
+      <div>query instalation table for next_change</div>
+  </section>
+</section>
+
+
 <section id="hero">
   <div class="container">
       <div class="content-center">
