--- a/src/app/components/common/login/login.component.html
+++ b/src/app/components/common/login/login.component.html
@@ -1,7 +1,7 @@
 <section id="login" class="padded">
   <div class="container">
     <div class="p-4"></div>
-      <h2 class="text-center">Inicio de sesión</h2>
+      <h2 class="text-center">Login</h2>
       <div class="row">
           <div class="col-md-4">
           </div>
@@ -9,19 +9,19 @@
               <form ngNativeValidate [formGroup]="loginForm"
               (ngSubmit)="verificarLogin(loginForm.value)">
                   <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Usuario"
+                      <input type="text" class="form-control" placeholder="Username"
                       formControlName="username" required>
                   </div>
                   <div class="form-group">
-                      <input type="password" class="form-control" placeholder="Contraseña"
+                      <input type="password" class="form-control" placeholder="Password"
                       formControlName="password" required>
                   </div>
                   <div class="form-group">
-                      <input type="submit" class="btn btn-secondary" value="Iniciar sesión">
+                      <input type="submit" class="btn btn-secondary" value="Login">
                   </div>
               </form>
               <div class="form-group">
-                  <input type="button" class="btn btn-secondary" value="Cerrar sesión"
+                  <input type="button" class="btn btn-secondary" value="Logout"
                   (click)="cerrarSesion()">
               </div>
           </div>
