Adding support for new database design

--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -1,29 +1,22 @@
 
-<style>
-  .indent-1 {float: left;}
-  .indent-1 section {width: 50%; float: left;}
-</style>
+<section>
 
-<section class="indent-1">
-  <!-- Section 1 -->
-  <section>
-      <div>Outstanding orders summary</div>
-      <div>orders table with basic info</div>
-  </section>
+  <div id="app" class="flex-container">
+    <div class="flex-item" style="background-color:white">
+    <app-outstanding></app-outstanding>
+    </div>
 
-  <!-- Section 2 -->
-  <section>
-      <div>Pending changes for the months</div>
-      <div>query instalation table for next_change</div>
-  </section>
-</section>
+    <div class="flex-item" style="background-color:white">
+      <app-outstanding></app-outstanding>
+    </div>
 
+    <div class="flex-item" style="background-color:white">
+      <app-outstanding></app-outstanding>
+    </div>
 
-<section id="hero">
-  <div class="container">
-      <div class="content-center">
-           <h2 class="mt-6">H2OVitanza Admin</h2>
-          <a href="/login" class="btn btn-secondary mt-4">Login<img src="../../../../assets/images/arrow-right.svg" class="ml-2"></a>
-      </div>
+    <div class="flex-item" style="background-color:white">
+      <app-outstanding></app-outstanding>
+    </div>
   </div>
+
 </section>
