--- a/src/app/components/main/outstanding/outstanding.component.html
+++ b/src/app/components/main/outstanding/outstanding.component.html
@@ -5,32 +5,19 @@
       <table class="table">
         <thead>
           <tr>
-            <th>Id</th>
-            <th>DatePlaced</th>
+            <th>Date Placed</th>
             <th>Notes</th>
-            <th>Delivered</th>
-            <th>Paid</th>
             <th>View Detail</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let order of orders">
-            <td>{{ order.OrderId_uuid }}</td>
-            <td>{{ order.DatePlaced }}</td>
+            <td>{{ order.GSI1SK}}</td>
             <td>{{ order.Notes }}</td>
-
-            <div *ngIf="order.Delivered == 1; then yes; else no"></div>
-            <ng-template #yes><td class="green-text">Yes</td></ng-template>
-            <ng-template #no><td class="red-text">No</td></ng-template>
-
-            <div *ngIf="order.Paid == 1; then yes; else no"></div>
-            <ng-template #yes><td class="green-text">Yes</td></ng-template>
-            <ng-template #no><td class="red-text">No</td></ng-template>
-
             <td>
               <fa-icon
                 [icon]="faEdit"
-                (click)="getDetails(order.OrderId_uuid)"
+                (click)="getDetails(order.GSI1PK)"
               ></fa-icon>
             </td>
           </tr>
@@ -66,14 +53,18 @@
           <tr>
             <th>Product</th>
             <th>Quantity</th>
-            <th>Discount Price</th>
+            <th>Price</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let details of orderdetails">
-            <td>{{ details.Product }}</td>
-            <td>{{ details.Quantity }}</td>
-            <td>{{ details.OverridePrice }}</td>
+            <td>{{ details.Name }}</td>
+            <td>{{ details.Qty }}</td>
+            <td>{{ details.oPrice }}</td>
+          </tr>
+          <tr>
+            <td colspan="2">Total:</td>
+            <td>S./ {{runningTotal}}</td>
           </tr>
         </tbody>
       </table>
