Updating to use new endpoints

--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -7,15 +7,15 @@
     </div>
 
     <div class="flex-item" style="background-color:white">
-      <app-outstanding></app-outstanding>
+      <app-pending-changes></app-pending-changes>
     </div>
 
     <div class="flex-item" style="background-color:white">
-      <app-outstanding></app-outstanding>
+      <app-open-notes></app-open-notes>
     </div>
 
     <div class="flex-item" style="background-color:white">
-      <app-outstanding></app-outstanding>
+      <app-upcoming-changes></app-upcoming-changes>
     </div>
   </div>
 
