Fixed customer loading and filtering

--- a/src/app/components/main/open-notes/open-notes.component.html
+++ b/src/app/components/main/open-notes/open-notes.component.html
@@ -27,7 +27,7 @@
             <td>
               <fa-icon
                 [icon]="faEdit"
-                (click)="getCustomer(order.PK)"
+                (click)="getCustomer(note.PK)"
               ></fa-icon>
             </td>
           </tr>
